entities update